--- a/homepage/src/download.page
+++ b/homepage/src/download.page
@@ -2,3 +2,4 @@
 title: Download
 ---
 
+Pakete für Windows und Linux und der Quellkode von NetHack-De können auf "Sourceforge":http://sourceforge.net/project/showfiles.php?group_id=191550 runtergeladen werden.
