--- a/homepage/src/english.page
+++ b/homepage/src/english.page
@@ -1,7 +1,7 @@
 ---
 title2: English summary
 ---
-NetHack-de is an attempt at a German translation of "NetHack":http://www.nethack.org/.
+NetHack-De is an attempt at a German translation of "NetHack":http://www.nethack.org/.
 
 The current state of the translation is work-in-progress.
 
