--- a/homepage/src/index.page
+++ b/homepage/src/index.page
@@ -8,6 +8,11 @@ Auf der "Statusseite":status.html wird der aktuelle Stand der Übersetzung angez
 
 h3. News
 
+h4(#news-2008-06-10). 10. Jun 2008 
+* ca. 60% des generierten Textes übersetzt
+* Bugfixes Win32-GUI
+* Absturz beim Treten eines gerittenen, schlafenden Pferdes gefixt
+
 h4(#news-2008-03-09). 9. Mär 2008 
 * Alpha-Release NetHack-De 3.4.2-20080309a
 * ca. 50% des generierten Textes übersetzt
