kein Versuch mehr

--- a/homepage/src/index.page
+++ b/homepage/src/index.page
@@ -1,4 +1,4 @@
-NetHack-De ist der Versuch einer deutschen Übersetzung des Spieles "NetHack":http://www.nethack.org/.
+NetHack-De ist eine deutsche Übersetzung des Spieles "NetHack":http://www.nethack.org/.
 
 Im Moment ist die Übersetzung noch in Arbeit und deshalb unvollständig.
 
