News: public server fuer NetHack-De

--- a/homepage/src/index.page
+++ b/homepage/src/index.page
@@ -8,6 +8,10 @@ Auf der "Statusseite":status.html wird der aktuelle Stand der Übersetzung angez
 
 h3. News
 
+h4(#news-2008-10-01). 1. Okt 2008: NetHack-De online spielen!
+
+* Ab sofort gibt es unter <a href="http://slashem.de/">http://slashem.de/</a> die Möglichkeit, NetHack-De online zu spielen!
+
 h4(#news-2008-09-07). 7. Sep 2008: Alpha-Release NetHack-De 3.4.3-20080907a
 
 * ca. 75% des generierten Textes übersetzt
