--- a/homepage/src/download.page
+++ b/homepage/src/download.page
@@ -2,7 +2,7 @@
 title: Download
 ---
 
-Pakete für Windows und Linux und der Quellkode von NetHack-De können auf "Sourceforge":http://sourceforge.net/project/showfiles.php?group_id=191550 runtergeladen werden.
+Pakete für Windows und Linux und der Quellkode von NetHack-De können von "Sourceforge":http://sourceforge.net/project/showfiles.php?group_id=191550 runtergeladen werden.
 
 Auf Sourceforge ist auch das 
 "Subversion-Repository":http://sourceforge.net/svn/?group_id=191550 
