Umfrage in die News

--- a/homepage/src/index.page
+++ b/homepage/src/index.page
@@ -8,6 +8,10 @@ Auf der "Statusseite":status.html kann der aktuelle Stand der Übersetzung einge
 
 h3. News
 
+h4(#news-2009-11-09). 09. Nov 2009: NetHack-Umfrage
+* Aktive und ehemalige (was macht ihr dann auf dieser Seite?) NetHack-Spieler werden gebeten,
+  die "NetHack-Umfrage":poll.html auszufüllen.
+
 h4(#news-2009-01-15). 15. Jan 2009: Alpha-Release NetHack-De 3.4.3-20090115a
 
 * ca. 80% des generierten Textes übersetzt
