NetHack-Umfrage-News

--- a/homepage/src/index.page
+++ b/homepage/src/index.page
@@ -8,6 +8,10 @@ Auf der "Statusseite":status.html kann der aktuelle Stand der Übersetzung einge
 
 h3. News
 
+h4(#news-2010-02-16). 16. Feb 2010: NetHack-Umfrage ausgewertet
+* Die NetHack-Umfrage 2009 ist fertig ausgewertet und die Auswertung kann
+  "hier":nethack_poll_results.txt runtergeladen werden.
+
 h4(#news-2009-11-09). 09. Nov 2009: NetHack-Umfrage
 * Aktive und ehemalige (was macht ihr dann auf dieser Seite?) NetHack-Spieler werden gebeten,
   die "NetHack-Umfrage":poll.html auszufüllen.
