UnNetHack- und "NetHack in other languages"-Links hinzugefuegt

--- a/homepage/src/links.page
+++ b/homepage/src/links.page
@@ -6,9 +6,11 @@ h2. NetHack
 * "NetzHack":http://www.netzhack.de/ - der andere Versuch einer deutschen NetHack-Übersetzung
 * "NetHack":http://www.nethack.org/ - offizielle Homepage
 * "WikiHack":http://nethack.wikia.com/ - englischsprachiges NetHack-Wiki
+* "NetHack in Other Languages":http://nethack.wikia.com/ - Übersetzungen von NetHack in andere Sprachen
 
 h2. Sonstiges
 
 * "RogueBasin":http://roguebasin.roguelikedevelopment.org/ - englischsprachiges Roguelike-Wiki
 * "The Roguelike World Map":http://www.roguetemple.com/map/ - Weltkarte von Roguelike-Spielern und -Entwicklern
 * "DoomRL":http://doom.chaosforge.org/
+* "UnNetHack":http://apps.sf.net/trac/unnethack/ - NetHack-Fork von Patric Mueller
