WikiHack-Daten aktualisiert

--- a/homepage/src/links.page
+++ b/homepage/src/links.page
@@ -5,7 +5,7 @@ h2. NetHack
 * "NetHack-De-Projekt-Seite":http://www.ohloh.net/projects/nethack-de auf "Ohloh":http://www.ohloh.net/
 * "NetzHack":http://www.netzhack.de/ - der andere Versuch einer deutschen NetHack-Übersetzung
 * "NetHack":http://www.nethack.org/ - offizielle Homepage
-* "WikiHack":http://nethack.wikia.com/ - englischsprachiges NetHack-Wiki
+* "NethackWiki":http://nethackwiki.com/ - englischsprachiges Wiki für NetHack
 * "NetHack in Other Languages":http://nethack.wikia.com/ - Übersetzungen von NetHack in andere Sprachen
 
 h2. Sonstiges
