--- a/homepage/src/index.page
+++ b/homepage/src/index.page
@@ -8,6 +8,10 @@ Auf der "Statusseite":status.html kann der aktuelle Stand der Übersetzung einge
 
 h3. News
 
+h4(#news-2011-06-26). 26. Jun 2011: NetHack-De-Kurzhilfe
+* Johanna Ploog hat eine "deutschsprachige Kurzhilfe für NetHack-De":dokumentation.html erstellt,
+  die die Befehle und die Bedienung von NetHack-De beschreibt.
+
 h4(#news-2010-02-16). 16. Feb 2010: NetHack-Umfrage ausgewertet
 * Die NetHack-Umfrage 2009 ist fertig ausgewertet und die Auswertung kann
   "hier":nethack_poll_results.txt runtergeladen werden.
