Update Linux-Screenshot und neuer Windows-Screenshot

--- a/homepage/src/screenshots.page
+++ b/homepage/src/screenshots.page
@@ -1,6 +1,10 @@
-h3. Linux-Screenshot
+h3. Linux
 
-!nethack_inventory.png(Screenshot NetHack-De Inventar)!
+!{width:70%}nethack_inventory.png(Screenshot NetHack-De Inventar)!:nethack_inventory.png
+
+h3. Windows-GUI
+
+!{width:70%}nethack-de-win32-kramladen.png(Screenshot Windows-GUI von NetHack-De)!:nethack-de-win32-kramladen.png
 
 h3. NetHack-De-Video
 
