--- a/homepage/src/aenderungen.page
+++ b/homepage/src/aenderungen.page
@@ -25,4 +25,5 @@ Die folgenden NetHack-Bugs wurden in NetHack-De behoben:
 * SC343-11 It's possible to easily find the identity of a high priest on the Astral plane.
 * SC343-12 Hero using telepathy can abuse Call on the Astral Plane.
 * Das Buch der Toten kann nicht mehr durch Lava zerstört werden, wenn der Spieler ohne Feuerresistenz in Lava fällt.
+* Einige durch NULL-Pointer verursachten Abstürze wurden behoben.
 
