Links auf Artikel in NetHackWiki

--- a/homepage/src/links.page
+++ b/homepage/src/links.page
@@ -6,7 +6,7 @@ h2. NetHack
 * "NetzHack":http://www.netzhack.de/ - der andere Versuch einer deutschen NetHack-Übersetzung
 * "NetHack":http://www.nethack.org/ - offizielle Homepage
 * "NethackWiki":http://nethackwiki.com/ - englischsprachiges Wiki für NetHack
-* "NetHack in Other Languages":http://nethack.wikia.com/ - Übersetzungen von NetHack in andere Sprachen
+* "NetHack in Other Languages":http://nethackwiki.com/wiki/NetHack_in_Other_Languages - NetHackWiki-Artikel über Übersetzungen von NetHack in andere Sprachen
 
 h2. Sonstiges
 
