News: CRE-Podcastfolge zu NetHack

--- a/homepage/src/index.page
+++ b/homepage/src/index.page
@@ -8,6 +8,9 @@ Auf der "Statusseite":status.html kann der aktuelle Stand der Übersetzung einge
 
 h3. News
 
+h4(#news-2013-01-13). 13. Jan 2013: Deutschsprachige Podcastfolge zu NetHack
+* <a href="http://de.wikipedia.org/wiki/CRE_%28Podcast%29">CRE</a> hat eine hörenswerte <a href="http://cre.fm/cre199">Podcastfolge zum Thema NetHack</a> gemacht.
+
 h4(#news-2012-01-27). 27. Jan 2012: Alpha-Release NetHack-De 3.4.3-20120127a
 * ca. 93% des generierten Textes übersetzt
 * zusätzliche Halluzinationsmonster und Halluzinationsfarben
