News-Nachtrag: Release von NetHack-De 3.4.3-20120916a

--- a/homepage/src/index.page
+++ b/homepage/src/index.page
@@ -11,6 +11,10 @@ h3. News
 h4(#news-2013-01-13). 13. Jan 2013: Deutschsprachige Podcastfolge zu NetHack
 * <a href="http://de.wikipedia.org/wiki/CRE_%28Podcast%29">CRE</a> hat eine hörenswerte <a href="http://cre.fm/cre199">Podcastfolge zum Thema NetHack</a> gemacht.
 
+h4(#news-2012-09-16). 16. Sep 2012: Ausserplanmässige Veroeffentlichung NetHack-De 3.4.3-20120916a
+* Da ich gerade dabei war, etwas an NetHack-De zu programmieren und die <a href="http://roguebasin.roguelikedevelopment.org/index.php?title=2012_ARRP">alljährliche Roguelike-Release-Party 2012</a> auch gerade vor der Tür stand, habe ich mich zu einem kleinen Release hinreissen lassen. Der nächste reguläre Release ist geplant, wenn der Text komplett übersetzt ist.
+* ca. 94% des generierten Textes übersetzt
+
 h4(#news-2012-01-27). 27. Jan 2012: Alpha-Release NetHack-De 3.4.3-20120127a
 * ca. 93% des generierten Textes übersetzt
 * zusätzliche Halluzinationsmonster und Halluzinationsfarben
