--- a/homepage/layouts/default.html
+++ b/homepage/layouts/default.html
@@ -1,29 +1,54 @@
-<!DOCTYPE HTML>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>A Brand New nanoc Site - <%= @item[:title] %></title>
-    <link rel="stylesheet" href="<%= @items['/stylesheet/'].path %>">
+<?xml version="1.0"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
+<html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
+	<head>
+		<meta content="text/html; charset=utf-8" http-equiv="content-type" />
+		<meta content="German translation of NetHack" name="description" />
+		<meta content="nethack, german, deutsch" name="keywords" />
+		<meta content="Patric Mueller - http://bhaak.net/" name="author" />
+		<meta content="nanoc <%= Nanoc::VERSION %>" name="generator" />
+		<link type="text/css" href="/nethack.css" rel="stylesheet" />
+		<link type="text/css" href="/default.css" rel="stylesheet" />
+		<link type="application/rss+xml" rel="alternate" title="RSS 2.0" href="/nethack-de-updates.rss" />
+		<link type="image/x-icon" href="/favicon.ico" rel="shortcut icon" />
+		<title>NetHack-De: <%= @item[:title] %></title>
+	</head>
 
-    <!-- you don't need to keep this, but it's cool for stats! -->
-    <meta name="generator" content="nanoc <%= Nanoc::VERSION %>">
-  </head>
-  <body>
-    <div id="main">
-      <%= yield %>
-    </div>
-    <div id="sidebar">
-      <h2>Documentation</h2>
-      <ul>
-        <li><a href="http://nanoc.ws/docs/">Documentation</a></li>
-        <li><a href="http://nanoc.ws/docs/tutorial/">Getting Started</a></li>
-      </ul>
-      <h2>Community</h2>
-      <ul>
-        <li><a href="http://groups.google.com/group/nanoc/">Discussion Group</a></li>
-        <li><a href="irc://chat.freenode.net/#nanoc">IRC Channel</a></li>
-        <li><a href="http://github.com/nanoc/nanoc/wiki/">Wiki</a></li>
-      </ul>
-    </div>
-  </body>
+	<body>
+		<div id="container">
+
+			<div id="titel">
+
+				<div class="flattr">
+					<script type="text/javascript">
+						var flattr_url = 'http://nethack-de.sourceforge.net/';
+						var flattr_btn='compact';
+					</script>
+					<script src="http://api.flattr.com/button/load.js" type="text/javascript"></script>
+					<noscript>
+						<a href="http://flattr.com/thing/7079/NetHack-in-deutscher-%C3%9Cbersetzung" target="_blank"><img src="http://api.flattr.com/button/button-compact-static-100x17.png" alt='Flattr this' title="Flattr this" border="0" /></a>
+					</noscript>
+				</div>
+
+				<h1>NetHack-De</h1>
+
+			</div>
+
+			<div id="menu">
+				<div class="webgen-menu-vert webgen-menu">
+					<ul>
+						<%= menu_link("Home", "/index.html") %><%= menu_link("Doku", "/dokumentation.html") %><%= menu_link("Status", "/status.html") %><%= menu_link("Screenshots", "/screenshots.html") %><%= menu_link("Bestiarium", "/nhtohtml/index.html") %><%= menu_link("&#196;nderungen", "/aenderungen.html") %><%= menu_link("Forum", "http://sourceforge.net/p/nethack-de/discussion/675972/") %><%= menu_link("Download", "/download.html") %><%= menu_link("Links", "/links.html") %><%= menu_link("English", "/english.html") %>
+					</ul>
+				</div>
+			</div>
+
+			<div id="content">
+				<%= yield %>
+
+				<div id="logo">
+					<a href="http://sourceforge.net/projects/nethack-de"><img width="120" height="30" border="0" alt="Get NetHack-De at SourceForge.net. Fast, secure and Free Open Source software downloads" src="http://sflogo.sourceforge.net/sflogo.php?group_id=191550&amp;type=11" /></a>
+				</div>
+			</div>
+		</div>
+	</body>
 </html>
